--- a/config/services.icon.yml
+++ b/config/services.icon.yml
@@ -1,8 +1,8 @@
 services:
   icon.fontawesome:
     class: Drupal\go1_base\Icon\FontAwesome
-    tags: [{ name: 'at.icon', weight: -10 }]
+    tags: [{ name: 'go1.icon', weight: -10 }]
 
   icon.fontello:
     class: Drupal\go1_base\Icon\FontEllo
-    tags: [{ name: 'at.icon' }]
+    tags: [{ name: 'go1.icon' }]
