--- a/tests/go1test_route/config/routes/routes.form.yml
+++ b/tests/go1test_route/config/routes/routes.form.yml
@@ -2,5 +2,5 @@ routes:
   go1test_route/config:
     title: 'Test form/form arguments callback'
     access arguments: ['access content']
-    form: '\Drupal\go1_base\Config\Admin_Form'
+    form: '\Drupal\go1_base\Config\AdminForm'
     form arguments: [go1_base, services, services]
