--- a/config/services.theming.yml
+++ b/config/services.theming.yml
@@ -1,12 +1,12 @@
 services:
   twig.core:
     class: '\Twig_Environment'
-    factory_class: '\Drupal\go1_base\Twig\Environment_Factory'
+    factory_class: '\Drupal\go1_base\Twig\EnvironmentFactory'
     factory_method: getObject
 
   twig.file_loader:
     class: '\Twig_Loader_Filesystem'
-    factory_class: '\Drupal\go1_base\Twig\Environment_Factory'
+    factory_class: '\Drupal\go1_base\Twig\EnvironmentFactory'
     factory_method: getFileLoader
 
   twig.string_loader:
@@ -14,7 +14,7 @@ services:
 
   twig:
     class: '\Twig_Environment'
-    factory_class: '\Drupal\go1_base\Twig\Environment_Factory'
+    factory_class: '\Drupal\go1_base\Twig\EnvironmentFactory'
     factory_method: getFileService
     arguments: ['@twig.core']
     calls:
@@ -22,12 +22,12 @@ services:
 
   twig_string:
     class: '\Twig_Environment'
-    factory_class: '\Drupal\go1_base\Twig\Environment_Factory'
+    factory_class: '\Drupal\go1_base\Twig\EnvironmentFactory'
     factory_method: getStringService
     arguments: ['@twig.core']
     calls:
       - ['setLoader', ['@twig.string_loader']]
 
   twig_controller:
-    class: 'Drupal\go1_base\Helper\ControllerResolver\Twig_Controller'
+    class: 'Drupal\go1_base\Helper\ControllerResolver\TwigController'
     arguments: ['@twig_string']
